# learnCpp

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  cmake-generator.py  conanfile.txt  gen.cmake  print_tool_chain.py  update-conan.sh  update.sh
001-learnCpp/: 005-测试时间.cpp  009-测试换行.cpp  01-随意跳转.cpp  010-宽字符.cpp  017-测试闭包.cpp  02-随意跳转2.cpp  020-and逻辑运算符.cpp  025-读取流的全部内容.cpp  03-随意跳转3.cpp  030-str.data().cpp  030-str.data.cpp  035-cpp的raw字符串.cpp  035-使用array.cpp  041-map.cpp  041-sizeof&strlen.cpp  05-右值引用.cpp  09-cpp格式化输出.cpp  10-moveVector追加.cpp  100-haha.cpp  101-二分法.cpp  103-int8.cpp  105-字符串.cpp  106-vector析构会析构成员.cpp  110-auto引用.cpp  118-结构体的函数指针.cpp  12-随机数.cpp  120-runnable.cpp  13-使用字符串.cpp  131-阻塞队列.cpp  133-isValidId.cpp  134-生产者消费者.cpp  135-条件变量.cpp  136-线程安全队列.cpp  140-语句块.cpp  141-单例.cpp  142-线程.cpp  144-lock一次性锁定多个mutex.cpp  145-deamon线程.cpp  145-给线程传递参数.cpp  149-async.cpp  (+30 more)
001-learnCpp/10-多线程/: 122-runnable.cpp  130-生产者消费者.cpp  137-cpp同步异步互相转换.cpp  142-线程.cpp  142-线程CPU数.cpp  143-lock_guard.cpp  144-call_once.cpp  144-recursive_lock可重入锁.cpp  144-unique_lock.cpp  144-unique_lock2.cpp  145-deamon线程.cpp  148-threadlocal.cpp  148-threadlocal与析构函数.cpp  149-packaged_task.cpp  329-发送信号.cpp  330-automic_long.cpp  331-automic_flag.cpp
001-learnCpp/20-流/: 10-cpp格式化输出2.cpp  305-size_t测试.cpp
001-learnCpp/30-STL/: 040-map.cpp  042-list.cpp  190-容器.cpp  195-distance.cpp
001-learnCpp/40-字符串/: 035-cpp的raw字符串.cpp  105-字符串.cpp  13-使用字符串.cpp
001-learnCpp/60-运算符重载/: 160-类的运算符重载.cpp  161-输入输出运算符重载.cpp  172-赋值运算符.cpp  176-成员访问运算符.cpp  178-成员访问运算符.cpp
001-learnCpp/90-面向对象/: 180-多态.cpp  180-多态3纯虚函数.cpp  245-面向接口编程.cpp
001-learnCpp/95-内存管理/: 102-析构函数的时机.cpp  115-new结构体会清零吗.cpp  116-new长度为0的数组.cpp
016-学习boost/: 001-列出文件夹下所有文件.cpp  002-文件大小.cpp  003-first.cpp  004-listdir.cpp  005-使用path.cpp  006-boost的format.cpp  009-类型转换.cpp  011-线程.cpp  015-使用括号函数定义多线程.cpp  020-使用boost.bind.cpp  022-thread-local.cpp  023-使用boost的assert.cpp  028-使用boost.json.cpp  032-boost的log.cpp  032-boost的log行号.cpp  046-lscpu.cpp  CMakeLists.txt  cmake-generator.py
030-http/: CMakeLists.txt  cli.cpp  req.py  server.cpp  sslServer.cpp
033-json/: 001-usejson.cpp  002-usejson.cpp  003-usejson.cpp  004-结构体.cpp  005-json和msgpack.cpp  007-usejson.cpp  040-新版json.cpp  1-json.cpp
090-learnCuda/: add.cpp  haha.cpp  向量加法.cpp  矩阵乘法.cpp
090-learnCuda/PaxHeader/: add.cpp  haha.cpp  向量加法.cpp  矩阵乘法.cpp
100-openssl/: 01-one.cpp  03-AccessTokenTest.cpp  08-main.cpp  CMakeLists.txt  CMakeLists2.txt  README.md  five.cpp  four.cpp  three.cpp
150-protobuf/: 01-protobuf和json.cpp  02-protobuf的optional的默认值.cpp  03-充分测试proto和json转换.cpp  README.md  gen.sh  haha.proto  haha2.proto  testMany.proto
150-protobuf/gen2/: haha2.pb.cc  haha2.pb.h
150-protobuf/proto2json/: proto2json.cpp  proto2json.h
200-thriftcpp/: .gitignore  CMakeListsText.txt  Haha_client.cpp  Haha_server.cpp  README.md  gen.sh  main.thrift
200-thriftcpp/21-ThriftTest/: README.md  main.thrift
200-thriftcpp/21-ThriftTest/gen-cpp/: Mine.cpp  Mine.h  Mine_server.skeleton.cpp  main_types.cpp  main_types.h
200-thriftcpp/gen-cpp/: Haha.cpp  Haha.h  Haha_server.skeleton.cpp  main_constants.cpp  main_constants.h  main_types.cpp  main_types.h
200-thriftcpp/gen-go/main/: main.go
200-thriftcpp/gen-html/: index.html  main.html
200-thriftcpp/gen-json/: main.json
200-thriftcpp/gen-netstd/: Haha.cs
300-loginpay/: md5kvlist.cpp
300-loginpay/md5/: md5.cpp  md5.h
300-loginpay/url/: url.cc  url.h
301-cjson/: 025-使用cjson.cpp
305-msgpack/: 026-使用msgpack.cpp  027-msgpackInC.cpp  034-msgpack打包map.cpp  102-msgpack自定义类型.cpp  104-msgpackDemo.cpp  106-msgpack-stream.cpp  108-msgpack自定义结构.cpp
307-toml/: 01-one.cpp  config.toml
309-s3/: s3.hpp
309-s3/015-使用s3/: 04-copy-object.cpp  05-create_bucket.cpp  06-delete_bucket.cpp  07-delete_bucket_policy.cpp  08-delete_object.cpp  09-delete_website_config.cpp  10-get_acl.cpp  11-get_bucket_policy.cpp  13-get_put_bucket_acl.cpp  14-get_put_object_acl.cpp  18-put_bucket_policy.cpp  22-put_website_config.cpp  23-s3_demo.cpp  31-list_buckets.cpp  34-list_object.cpp  35-get_object.cpp  36-get_object.cpp  39-put_object.cpp  40-put_object_async.cpp  41-put_object_buffer.cpp
310-eigen/: 01-firstBlood.cpp
334-curl/: haha.cpp
335-numcpp/: 101-使用numcpp.cpp
doc/: README.md  book.toml
doc/src/: awesome-cpp.md  cpp中的类型修饰符.md  cpp异常处理.html  cpp异常处理抛出值接收引用.html  cpp异常处理最佳实践.md  cpp的流控制.md  static.md  日期时间.md
mylib/: 008-测试tqdm.cpp  015-测试colorama.cpp  030-测试pathjoin.cpp  032-测试log.cpp  builtin.hpp  colorama.cpp  colorama.hpp  common.hpp  dset.h  log.hpp  net.hpp  os.hpp  tqdm.hpp  union_find.hpp
opensource/faiss/: AutoTune.cpp  AutoTune.h  AuxIndexStructures.cpp  AuxIndexStructures.h  CONTRIBUTING.md  Clustering.cpp  Clustering.h  Dockerfile  FaissAssert.h  FaissException.cpp  HNSW.cpp  HNSW.h  Heap.cpp  IVFlib.cpp  IVFlib.h  Index.cpp  Index.h  IndexBinary.cpp  IndexBinary.h  IndexBinaryFlat.cpp  IndexBinaryFlat.h  IndexBinaryFromFloat.cpp  IndexBinaryFromFloat.h  IndexBinaryHNSW.cpp  IndexBinaryHNSW.h  IndexBinaryIVF.cpp  IndexBinaryIVF.h  IndexFlat.cpp  IndexFlat.h  IndexHNSW.cpp  IndexHNSW.h  IndexIVF.cpp  IndexIVF.h  IndexIVFFlat.cpp  IndexIVFFlat.h  IndexIVFPQ.cpp  IndexIVFPQ.h  IndexIVFSpectralHash.cpp  IndexIVFSpectralHash.h  IndexLSH.cpp  (+37 more)
opensource/faiss/acinclude/: ax_check_cpu.m4  ax_gcc_x86_cpu_supports.m4
opensource/faiss/benchs/: bench_for_interrupt.py  bench_gpu_1bn.py  bench_gpu_sift1m.py  bench_hnsw.py  bench_index_pq.py  bench_polysemous_1bn.py  bench_polysemous_sift1m.py  bench_scalar_quantizer.py  bench_vector_ops.py  datasets.py
opensource/faiss/c_api/: AutoTune_c.cpp  AutoTune_c.h  AuxIndexStructures_c.cpp  AuxIndexStructures_c.h  Clustering_c.cpp  Clustering_c.h  INSTALL.md  IndexFlat_c.cpp  IndexFlat_c.h  IndexIVFFlat_c.cpp  IndexIVFFlat_c.h  IndexIVF_c.cpp  IndexIVF_c.h  IndexLSH_c.cpp  IndexLSH_c.h  IndexShards_c.cpp  IndexShards_c.h  Index_c.cpp  Index_c.h  MetaIndexes_c.cpp  MetaIndexes_c.h  error_c.h  error_impl.cpp  error_impl.h  example_c.c  faiss_c.h  (+3 more)
(+217 files in other folders)
