
cmake_minimum_required(VERSION 3.21)
project(learnBoost)

set(CMAKE_CXX_STANDARD 14)

find_package(Boost REQUIRED COMPONENTS filesystem)

add_executable(target9ec5180401939a695e982686bb63bf0f 12-随机数.cpp)
    

add_executable(targetbd0a793e8f2c0a34fc69f8418ea086ee 100-haha.cpp)
    

add_executable(targetb0174e23d2b5956e114fabe09a036bdc 05-右值引用.cpp)
    

add_executable(targeta1bc17e7e2e675fecbf27bad470041af 035-cpp的raw字符串.cpp)
    

add_executable(target37c8fbb4f35f96b16b11fbbbe273a7cf 01-随意跳转.cpp)
    

add_executable(targeta451f39ae7c63bd21c8a550caf4deb59 13-使用字符串.cpp)
    

add_executable(targetafe956b3698151c7ce0ef8125c97dce8 03-随意跳转3.cpp)
    

add_executable(target9a5d1a90cb20732c0e5f2428a8a6e178 10-moveVector追加.cpp)
    

add_executable(target156d9766a3c758df44ae8f90313396ea 10-cpp格式化输出2.cpp)
    

add_executable(target9a5f7322b225c6ce7ae57fcf4a01d78b 20-new和delete是operator.cpp)
    

add_executable(target5488a0bd806f6486775e8be66696011c 02-随意跳转2.cpp)
    

add_executable(targetd34c3409e3de65c79b5fccf5dd25f43c 09-cpp格式化输出.cpp)
    