
cmake_minimum_required(VERSION 3.21)
project(learnBoost)

set(CMAKE_CXX_STANDARD 14)

find_package(Boost REQUIRED COMPONENTS filesystem)

add_executable(targetaf485549b382eff4fe60cb23bfa94b1d 180-多态.cpp)
    

add_executable(target177ba41fc62123af31aafcae4f423f96 310-函数模板.cpp)
    

add_executable(targetffdfae3b4770e2f6f97a0fc2d55829aa 190-容器.cpp)
    

add_executable(target73a8980097bbb12f92a083a6a0b46020 12-随机数.cpp)
    

add_executable(targete54efde47e4001668d763f3a5a9048df 305-异常和捕捉异常.cpp)
    

add_executable(targetcfa876414bff32d5a34e3c3d5970c874 120-runnable.cpp)
    

add_executable(targetc9cc65baa938a7a8fc317b52fc1b2d13 321-带参数的宏.cpp)
    

add_executable(targeta5689e59e6376baf2967da14f1cbbb67 100-haha.cpp)
    

add_executable(target0cea80d9ca407ddbcd8b37badf413fe4 171-括号运算符.cpp)
    

add_executable(target3f4d6ce8b1d3dc0c2699a9535b5ba469 102-析构函数的时机.cpp)
    

add_executable(target159dac1fa28413cf0c7788c5cd7ce508 176-成员访问运算符.cpp)
    

add_executable(targetdfdad0241e75d131e15b4b4e1aec57dd 160-类的运算符重载.cpp)
    

add_executable(targetf05e6052c85d310d2c0cf5bd40c481b0 05-右值引用.cpp)
    

add_executable(target7d5ecf7a3733bcfff8ae15be0f017255 035-cpp的raw字符串.cpp)
    

add_executable(targetde62e34ab16f6429ac8890810766ebbb 101-二分法.cpp)
    

add_executable(target51305908282eb3837928f422cd6bb25d 140-语句块.cpp)
    

add_executable(target02507a5d20201a41a406879efe243e10 01-随意跳转.cpp)
    

add_executable(target6a558f0f46fc10caa966dfe6845f09f3 106-vector析构会析构成员.cpp)
    

add_executable(target60b14af4315bf0b3c8d6faf927a3ac7b 115-new结构体会清零吗.cpp)
    

add_executable(targetecafae00843613161748173fbfba0980 161-输入输出运算符重载.cpp)
    

add_executable(targetc323413b0d0e11f0241622148cdba983 110-auto引用.cpp)
    

add_executable(target5d82fdea28a9c1d91e6a6666ff6f2d42 245-面向接口编程.cpp)
    

add_executable(targetc2afea2b1bbfbca7ac2aaadcb8f88f87 175-下标运算符.cpp)
    

add_executable(target6099e6f139d3ec2a7e6ea34a331331fa 320-类模板.cpp)
    

add_executable(targetbf89ee9ce46d0d8377ab8423eb911bc6 13-使用字符串.cpp)
    

add_executable(target38d02881caf478addd4ff773740e2764 300-文件流.cpp)
    

add_executable(target6667a4083edaa669e6ea3334cfe594d2 105-字符串.cpp)
    

add_executable(target931d009c2f9a720bf48260ab256bf0c7 180-多态3纯虚函数.cpp)
    

add_executable(targete029e72e1a561b5075c763919c08936d 03-随意跳转3.cpp)
    

add_executable(target5697166156f3b7d17421840a779e13a2 148-threadlocal.cpp)
    

add_executable(targetb590e5de9b9e3e57c13467450715fa04 041-map.cpp)
    

add_executable(target11999391a3de81b8f611975955765978 142-线程.cpp)
    

add_executable(target21359f9262b28b1feb6d5159e8b13b7f 200-实现排序.cpp)
    

add_executable(target7c5cc75dc5508dc8e642ded3ed8af604 116-new长度为0的数组.cpp)
    

add_executable(targetb06af4bf425d88b579e295f06a352e6c 180-多态2.cpp)
    

add_executable(targetb81b4e799c75f4b0ace5270dcf5ac149 040-map.cpp)
    

add_executable(target4778a350b3f2839506d45352b170a84d 10-moveVector追加.cpp)
    

add_executable(target57e1e53df87540ddc1293e4be5a86213 118-结构体的函数指针.cpp)
    

add_executable(target35558c2a6895bec4aff64cdeddf4ee14 10-cpp格式化输出2.cpp)
    

add_executable(targetd8f40331cdf60600cb24118ed7066643 20-new和delete是operator.cpp)
    

add_executable(target6e0919f76e0eb02862d0789ee5d7d6ff 02-随意跳转2.cpp)
    

add_executable(targetddf53e8a608b1390732e99b455685d73 155-拷贝构造函数.cpp)
    

add_executable(targetba6246ebdee702761888bb55650c4d2d 178-成员访问运算符.cpp)
    

add_executable(target23aaf10f7e4d0726d7f8e32b40cdd311 130-生产者消费者.cpp)
    

add_executable(target0483e134846cb0e7fc19e850b9ed137c 103-int8.cpp)
    

add_executable(target745784080c7a4017dd4604f4df6dee50 150-输入输出流.cpp)
    

add_executable(target9a00c6d4894f3cd77f5057727852a77c 141-单例.cpp)
    

add_executable(target4a2847206e469ad471201a82131dc6d6 09-cpp格式化输出.cpp)
    

add_executable(target209173d19331235f3b1a247c6860c90c 172-赋值运算符.cpp)
    

add_executable(target41c1dbf583a0d871872186df5267e249 133-isValidId.cpp)
    

add_executable(target90865618c7d1e24ae2ad40ed243ee3f8 170-加加减减运算符重载.cpp)
    

add_executable(target95baa3d706442d86c3bda3d01d6ec93e 122-runnable.cpp)
    