
cmake_minimum_required(VERSION 3.21)
project(learnBoost)

set(CMAKE_CXX_STANDARD 14)

find_package(Boost REQUIRED COMPONENTS filesystem)

add_executable(targetc48efb9592679edd0f5a633628943346 149-future.cpp)
    

add_executable(targetaf485549b382eff4fe60cb23bfa94b1d 180-多态.cpp)
    

add_executable(target87783881d08cdbd81408e67191d1d8ec 450-lambda表达式.cpp)
    

add_executable(target177ba41fc62123af31aafcae4f423f96 310-函数模板.cpp)
    

add_executable(targetffdfae3b4770e2f6f97a0fc2d55829aa 190-容器.cpp)
    

add_executable(target73a8980097bbb12f92a083a6a0b46020 12-随机数.cpp)
    

add_executable(targete54efde47e4001668d763f3a5a9048df 305-异常和捕捉异常.cpp)
    

add_executable(targetcfa876414bff32d5a34e3c3d5970c874 120-runnable.cpp)
    

add_executable(targetc9cc65baa938a7a8fc317b52fc1b2d13 321-带参数的宏.cpp)
    

add_executable(target700d13eb0512a35abd4da07738462199 145-给线程传递参数.cpp)
    

add_executable(targeta5689e59e6376baf2967da14f1cbbb67 100-haha.cpp)
    

add_executable(target0cea80d9ca407ddbcd8b37badf413fe4 171-括号运算符.cpp)
    

add_executable(target3f4d6ce8b1d3dc0c2699a9535b5ba469 102-析构函数的时机.cpp)
    

add_executable(target159dac1fa28413cf0c7788c5cd7ce508 176-成员访问运算符.cpp)
    

add_executable(targetdfdad0241e75d131e15b4b4e1aec57dd 160-类的运算符重载.cpp)
    

add_executable(targetf05e6052c85d310d2c0cf5bd40c481b0 05-右值引用.cpp)
    

add_executable(target7d5ecf7a3733bcfff8ae15be0f017255 035-cpp的raw字符串.cpp)
    

add_executable(target217954073d1dad98aeb06e0199474fec 136-线程安全队列.cpp)
    

add_executable(targetde62e34ab16f6429ac8890810766ebbb 101-二分法.cpp)
    

add_executable(targetab9100270621a81e89c08f2dc7a47270 149-async.cpp)
    

add_executable(target51305908282eb3837928f422cd6bb25d 140-语句块.cpp)
    

add_executable(targetdc599c224506e5a17c2b9aecdb3c2597 329-发送信号.cpp)
    

add_executable(targetd0b8acda41f82c07e85b0a6c4da47e47 144-recursive_lock可重入锁.cpp)
    

add_executable(targetb87c18fe8ba4bd7fc9efce01161033ca 134-生产者消费者.cpp)
    

add_executable(target02507a5d20201a41a406879efe243e10 01-随意跳转.cpp)
    

add_executable(target74873ad06ea36bfdfb8f90b7f8019c7f 135-条件变量.cpp)
    

add_executable(targetc8e0b10fc104b1642f1c033b78e9f1f6 148-threadlocal与析构函数.cpp)
    

add_executable(target7fe9c25e6011b3700503289035f8120f 402-cpp变参数模板.cpp)
    

add_executable(targetdadef75754656d06df3708864e7cf2df 149-packaged_task.cpp)
    

add_executable(target80fac0897557e204e5ddd8a87c4c1141 144-lock一次性锁定多个mutex.cpp)
    

add_executable(target6a558f0f46fc10caa966dfe6845f09f3 106-vector析构会析构成员.cpp)
    

add_executable(target60b14af4315bf0b3c8d6faf927a3ac7b 115-new结构体会清零吗.cpp)
    

add_executable(targetecafae00843613161748173fbfba0980 161-输入输出运算符重载.cpp)
    

add_executable(target4fb5c4ea9a52574b02e91a358b3d6fb5 144-call_once.cpp)
    

add_executable(targetc323413b0d0e11f0241622148cdba983 110-auto引用.cpp)
    

add_executable(target5d82fdea28a9c1d91e6a6666ff6f2d42 245-面向接口编程.cpp)
    

add_executable(target1303ca55d3e83659ea828467126baf96 404-模板fp.cpp)
    

add_executable(target9c8479b45be820a24f8f9fd6213f8cad 144-unique_lock2.cpp)
    

add_executable(targetbd1e722e83a02242bfa8942002d08ef5 328-信号.cpp)
    

add_executable(targetc2afea2b1bbfbca7ac2aaadcb8f88f87 175-下标运算符.cpp)
    

add_executable(targetf97883ccc5959b3afcbe6938520eca16 325-预定义宏.cpp)
    

add_executable(target6099e6f139d3ec2a7e6ea34a331331fa 320-类模板.cpp)
    

add_executable(targetbf89ee9ce46d0d8377ab8423eb911bc6 13-使用字符串.cpp)
    

add_executable(target38d02881caf478addd4ff773740e2764 300-文件流.cpp)
    

add_executable(target6667a4083edaa669e6ea3334cfe594d2 105-字符串.cpp)
    

add_executable(target931d009c2f9a720bf48260ab256bf0c7 180-多态3纯虚函数.cpp)
    

add_executable(target28f50fc566056a189e917f19f220bcef 142-线程CPU数.cpp)
    

add_executable(targete029e72e1a561b5075c763919c08936d 03-随意跳转3.cpp)
    

add_executable(target5697166156f3b7d17421840a779e13a2 148-threadlocal.cpp)
    

add_executable(target082028a372b32fe5aa0fffdea2a109bf 403-变参模板2.cpp)
    

add_executable(targetf62635f8896115df066c391c8b4e0471 401-cpp变参数.cpp)
    

add_executable(targetb590e5de9b9e3e57c13467450715fa04 041-map.cpp)
    

add_executable(target11999391a3de81b8f611975955765978 142-线程.cpp)
    

add_executable(target21359f9262b28b1feb6d5159e8b13b7f 200-实现排序.cpp)
    

add_executable(target8301148f4f83518a397da2a498700402 144-unique_lock.cpp)
    

add_executable(target7c5cc75dc5508dc8e642ded3ed8af604 116-new长度为0的数组.cpp)
    

add_executable(targetb06af4bf425d88b579e295f06a352e6c 180-多态2.cpp)
    

add_executable(targetb81b4e799c75f4b0ace5270dcf5ac149 040-map.cpp)
    

add_executable(target4778a350b3f2839506d45352b170a84d 10-moveVector追加.cpp)
    

add_executable(target57e1e53df87540ddc1293e4be5a86213 118-结构体的函数指针.cpp)
    

add_executable(target35558c2a6895bec4aff64cdeddf4ee14 10-cpp格式化输出2.cpp)
    

add_executable(targetd8f40331cdf60600cb24118ed7066643 20-new和delete是operator.cpp)
    

add_executable(target6605d70f1e39c54c29da40a15185b8dd 145-deamon线程.cpp)
    

add_executable(target2e31dffe50132f0ef215f2f59e97d3bb 137-cpp同步异步互相转换.cpp)
    

add_executable(target6e0919f76e0eb02862d0789ee5d7d6ff 02-随意跳转2.cpp)
    

add_executable(target655f48534f73d034d64f15d27c7edaac 149-promise.cpp)
    

add_executable(targetaf3d7e9ca82a5d6cdf9fdaa1349d1446 400-c语言变参数.cpp)
    

add_executable(targetddf53e8a608b1390732e99b455685d73 155-拷贝构造函数.cpp)
    

add_executable(targetba6246ebdee702761888bb55650c4d2d 178-成员访问运算符.cpp)
    

add_executable(target21d8e103d3a019c3dac0b8ea0a40659e 143-lock_guard.cpp)
    

add_executable(target23aaf10f7e4d0726d7f8e32b40cdd311 130-生产者消费者.cpp)
    

add_executable(target0483e134846cb0e7fc19e850b9ed137c 103-int8.cpp)
    

add_executable(target9faf49ceb954bc54368131aa1f2c04f8 131-阻塞队列.cpp)
    

add_executable(target9b4f15a1f6c87b1411f9d2eeb994f5be 440-concurrentMap.cpp)
    

add_executable(target745784080c7a4017dd4604f4df6dee50 150-输入输出流.cpp)
    

add_executable(target9a00c6d4894f3cd77f5057727852a77c 141-单例.cpp)
    

add_executable(target4a2847206e469ad471201a82131dc6d6 09-cpp格式化输出.cpp)
    

add_executable(target209173d19331235f3b1a247c6860c90c 172-赋值运算符.cpp)
    

add_executable(target41c1dbf583a0d871872186df5267e249 133-isValidId.cpp)
    

add_executable(target90865618c7d1e24ae2ad40ed243ee3f8 170-加加减减运算符重载.cpp)
    

add_executable(target95baa3d706442d86c3bda3d01d6ec93e 122-runnable.cpp)
    