cmake_minimum_required(VERSION 3.6.0-rc2)
project(cppRtcToken)

set(CMAKE_CXX_STANDARD 14)
include_directories(thirdparty/include)
link_directories(thirdparty/lib/mac)
file(GLOB_RECURSE token token/*.cpp)
message(info "token files ${token}")
add_executable(token 03-AccessTokenTest.cpp ${token})
add_executable(one 08-main.cpp)
add_executable(two 01-one.cpp)
target_link_libraries(one PRIVATE ssl crypto)
target_link_libraries(token PRIVATE ssl crypto)
target_link_libraries(two PRIVATE ssl crypto)
